  You can also download the latest version of less from there.

  Report bugs, suggestions or comments at 
  https://github.com/gwsw/less/issues.

======================================================================

	Major changes between "less" versions 691 and 692

* Configure tty to leave CR and NL unmodified (github #703).

* Fix memory leak in setupterm (github #707).

======================================================================

	Major changes between "less" versions 685 and 691

* Add --autosave option (github #678).

* Add ESC-f command (github #680).

* Add column number to long prompt and = message.

* Add prompt prototype sequences %C, %W, %Q and ?Q (github #685).

* Map keypad keys, and use terminfo rather than termcap since keypad
  definitions don't exist in termcap (github #650).

* Change HOME key to scroll fully left and END key to scroll fully right.
  Add shift-HOME and ctrl-HOME to scroll left and jump to top, and
  add shift-END and ctrl-END to scroll right and jump to end (github #658).

* Add LESSNOCONFIG environment variable.

* Add --without-termlib to configure (github #701).

* When setting line number colors (-DN), don't force bold attribute.
  To set bold, you must append "d" or "*" to the color string (github #684).

* While waiting for file data, only ^C or ^X will interrupt, not any command.
  This reverts to behavior that existed before less-670 (github #700).

* When --save-marks is not used, retain any marks saved in the history file
  (github #662).

* Defer sending the terminal init string until the first char is read
  from the input file (github #682).

* Make SIGHUP do an orderly exit like SIGTERM.

* Implement modeline handling in Windows build.

* Fix bugs and improve behavior of screen resize on Windows.

* Fix bug when entering search modifier key at start of non-empty 
  search string (github #668).

* Fix bug repainting screen with --form-feed (github #672).
