@@ -1074,7 +1074,8 @@ v689  12/27/25  Add prompt seqs %C, %W, %Q, ?Q; don't allow any command to
                 add --without-termlib.
 v690  12/31/25  Cleanup.
 v691  1/10/26   Fix mingw build.
-v692            Fix memory leak in setupterm; clear termio ICRNL|INLCR.
+v692            Fix memory leak in setupterm; clear termio ICRNL|INLCR;
+                fix bug with negative value in -z.
 */
 
 char version[] = "692x";
