@@ -15,6 +15,8 @@
 
 * Configure tty to leave CR and NL unmodified (github #703).
 
+* Fix bug using negative value with -z option (github #709).
+
 * Fix memory leak in setupterm (github #707).
 
 ======================================================================
